[gd_scene load_steps=30 format=2]

[ext_resource path="res://styles/back_btn.tres" type="StyleBox" id=1]
[ext_resource path="res://styles/hud_font_theme.tres" type="Theme" id=2]
[ext_resource path="res://img/coincoin.png" type="Texture" id=4]
[ext_resource path="res://img/hud_holder.png" type="Texture" id=5]
[ext_resource path="res://fonts/static/Montserrat-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://img/popup.png" type="Texture" id=7]
[ext_resource path="res://fonts/static/Montserrat-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://img/hand.png" type="Texture" id=9]
[ext_resource path="res://fonts/static/Montserrat-SemiBold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://fonts/static/Montserrat-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://img/relife_btn.png" type="Texture" id=12]
[ext_resource path="res://img/relife_btn_disabled.png" type="Texture" id=13]
[ext_resource path="res://img/res/restart_btn.tres" type="StyleBox" id=14]
[ext_resource path="res://scenes/games/relax/HUD.gd" type="Script" id=10001]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 660, 132 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 660, 132 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 660, 132 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 660, 132 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 660, 132 )

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 10001 )

[node name="BackButton" type="Button" parent="."]
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )

[node name="GoingToLose" type="Node2D" parent="."]

[node name="LoseAfterLbl" type="Label" parent="GoingToLose"]
margin_left = 356.0
margin_top = 606.0
margin_right = 504.0
margin_bottom = 627.0
custom_fonts/font = SubResource( 4 )
text = "You lose after 1.01"
align = 1

[node name="ToContinueLbl" type="Label" parent="GoingToLose"]
margin_left = 352.0
margin_top = 764.0
margin_right = 528.0
margin_bottom = 809.0
custom_fonts/font = SubResource( 5 )
text = "To continue tap twice 
on the screen"
align = 1
clip_text = true

[node name="DoubleTapImg" type="Sprite" parent="GoingToLose"]
texture = ExtResource( 9 )
centered = false

[node name="DoubleTapCostLbl" type="Label" parent="GoingToLose"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 6 )
text = "Cost 5 coins"
align = 1

[node name="MessageBG" type="Sprite" parent="GoingToLose"]
position = Vector2( 16, 519 )
z_index = -1
texture = ExtResource( 7 )
centered = false

[node name="LosePopUp" type="Node2D" parent="."]
visible = false

[node name="MessageBG" type="Sprite" parent="LosePopUp"]
position = Vector2( 16, 519 )
z_index = -1
texture = ExtResource( 7 )
centered = false

[node name="YouLoseLbl" type="Label" parent="LosePopUp"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )
text = "You lose!"
align = 1

[node name="LoseScoresLbl" type="Label" parent="LosePopUp"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 8 )
text = "Scores: 0"
align = 1

[node name="TimeToRelifeLbl" type="Label" parent="LosePopUp"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 9 )
text = "Time to relife"
align = 1

[node name="TimeLeftLbl" type="Label" parent="LosePopUp"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 10 )
text = "1.01"
align = 1

[node name="RelifeBtn" type="Button" parent="LosePopUp"]
margin_right = 12.0
margin_bottom = 20.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Relife for 10 coins"

[node name="RestartBtn" type="Button" parent="LosePopUp"]
margin_right = 12.0
margin_bottom = 20.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 17 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = ExtResource( 14 )
custom_styles/disabled = ExtResource( 14 )
custom_styles/normal = ExtResource( 14 )
text = "Restart"

[node name="CoinImg" type="Sprite" parent="."]
position = Vector2( 512, -25 )
texture = ExtResource( 4 )
centered = false

[node name="HudBG" type="Sprite" parent="."]
position = Vector2( 74, 137 )
z_index = -1
texture = ExtResource( 5 )
centered = false

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -238.0
margin_top = 4.0
margin_right = -133.0
margin_bottom = 65.0
grow_horizontal = 0
theme = ExtResource( 2 )
text = "000"

[node name="CoinLabel" type="Label" parent="."]
margin_left = 192.0
margin_top = 32.0
margin_right = 297.0
margin_bottom = 93.0
theme = ExtResource( 2 )
text = "123"

[node name="BestScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )

[node name="RelifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LosePopUp/RelifeBtn" to="." method="_on_relife_button_pressed"]
[connection signal="pressed" from="LosePopUp/RestartBtn" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="RelifeTimer" to="." method="_on_relife_timer_timeout"]
