[gd_scene load_steps=10 format=2]

[ext_resource type="Script" path="res://scenes/games/relax/HUD.gd" id=1]
[ext_resource type="FontFile" uid="uid://dw5ybdvspss5d" path="res://fonts/Xolonium-Regular.ttf" id=2]
[ext_resource type="Texture2D" uid="uid://qrrrlvty7wv3" path="res://img/points.png" id=3]
[ext_resource type="Texture2D" uid="uid://cc1q30qjwl46y" path="res://img/tester_info.png" id=4]
[ext_resource type="StyleBox" uid="uid://x1skeryxlci6" path="res://styles/back_btn.tres" id=5]
[ext_resource type="Texture2D" uid="uid://dsqiv4kc5gdmc" path="res://img/coin.png" id=6]

[sub_resource type="StyleBoxFlat" id=7]
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=8]
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=9]
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="HUD" type="CanvasLayer"]
script = ExtResource(1)

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -248.0
offset_bottom = 120.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource(2)
theme_override_font_sizes/font_size = 64
text = "0"
vertical_alignment = 1

[node name="Sprite2D" type="Sprite" parent="ScoreLabel"]
z_index = -1
position = Vector2(208, 64)
texture = ExtResource(3)

[node name="Message" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.296
anchor_top = 0.48
anchor_right = 0.296
anchor_bottom = 0.48
offset_left = -3.0
offset_top = -0.500038
offset_right = 411.0
offset_bottom = 80.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource(2)
theme_override_font_sizes/font_size = 64
text = "PinUp Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite" parent="Message"]
z_index = -1
position = Vector2(-1421, -79.5)
scale = Vector2(3.23438, 0.46875)
texture = ExtResource(4)
centered = false

[node name="StartButton" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.296
anchor_top = 0.849
anchor_right = 0.692
anchor_bottom = 0.942
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource(2)
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource(7)
theme_override_styles/hover = SubResource(8)
theme_override_styles/pressed = SubResource(9)
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BackButton" type="Button" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 58.0
offset_bottom = 58.0
theme_override_styles/normal = ExtResource(5)
theme_override_styles/hover = ExtResource(5)
theme_override_styles/pressed = ExtResource(5)
theme_override_styles/disabled = ExtResource(5)
theme_override_styles/focus = ExtResource(5)

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
position = Vector2i(500, 500)

[node name="CoinLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -191.0
offset_top = 145.0
offset_right = 152.0
offset_bottom = 236.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Sprite2D" type="Sprite" parent="CoinLabel"]
position = Vector2(-35, 48)
scale = Vector2(0.107422, 0.107422)
texture = ExtResource(6)

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
